--- a/libs/ui-components/src/contact-form/contact-form.component.html
+++ b/libs/ui-components/src/contact-form/contact-form.component.html
@@ -196,13 +196,13 @@
           <button
             class="cancel-btn"
             (click)="closeDialog()"
-            stroked-button
+            mat-flat-button
             type="button"
           >
             Cancel
           </button>
 
-          <button class="submit-btn" mat-stroked-button type="submit">
+          <button class="submit-btn" mat-flat-button type="submit">
             Submit
           </button>
         </div>
