test(frontend): add unit tests to my various components

--- a/libs/ui-components/src/material-view/components/material-card/material-card.component.html
+++ b/libs/ui-components/src/material-view/components/material-card/material-card.component.html
@@ -46,7 +46,7 @@
               type="button"
               mat-button
               color="primary"
-              (click)="showMoreInfo(material)"
+              (click)="showMoreInfo(material, $event)"
             >
               More information
             </button>
