refactor(frontend): replace observable with signal

--- a/libs/ui-components/src/material-view/components/material-info-dialog/material-info-dialog.component.html
+++ b/libs/ui-components/src/material-view/components/material-info-dialog/material-info-dialog.component.html
@@ -1,5 +1,5 @@
 <main>
-  @if (material$ | async; as material) {
+  @if (material(); as material) {
     <header [style.backgroundColor]="material.colorhex">
       {{ material.name }}
     </header>
