--- a/libs/ui-components/src/material-view/components/material-card/material-card.component.html
+++ b/libs/ui-components/src/material-view/components/material-card/material-card.component.html
@@ -42,7 +42,7 @@
                 [value]="material.tolerancePercentage"
               ></mat-progress-bar>
               <p class="tolerance-value">
-                ± {{ material.shrinkage | tolerancePercentage }}
+                ± {{ material.shrinkage | percent: '1.0-2' }}
               </p>
             </div>
           </mat-card-content>
