chore: added tolbar text to language translator

--- a/libs/ui-components/src/toolbar/toolbar.component.html
+++ b/libs/ui-components/src/toolbar/toolbar.component.html
@@ -10,10 +10,10 @@
   <div class="header-toolbar__right">
     <div class="header-toolbar__menu">
       <button class="header-toolbar__primary__btn">
-        <span>{{ 'toolbar.CART' | transloco }}</span>
+        <span>{{ 'toolbar.SIGNIN' | transloco }}</span>
       </button>
       <button class="header-toolbar__secondary__btn">
-        <span>{{ 'toolbar.LOGIN' | transloco }}</span>
+        <span>{{ 'toolbar.START_FOR_FREE' | transloco }}</span>
       </button>
       <button class="header-toolbar__lang__switcher" (click)="toggleOverlay()">
         <mat-icon aria-hidden="false" fontIcon="more_vert"></mat-icon>
