--- a/apps/iaimc-frontend/src/styles/stylestheme.scss
+++ b/apps/iaimc-frontend/src/styles/stylestheme.scss
@@ -54,7 +54,7 @@ html {
   --mat-sys-surface-tint: light-dark(#7d00fa, #d5baff);
   --mat-sys-inverse-surface: light-dark(#332e3b, #e9dff0);
   --mat-sys-inverse-on-surface: light-dark(#f7edfe, #332e3b);
-  --mat-sys-outline: light-dark(#CAD0D9, #978da3);
+  --mat-sys-outline: light-dark(#cad0d9, #978da3);
   --mat-sys-outline-variant: light-dark(#cdc2da, #4b4356);
   --mat-sys-neutral10: light-dark(
     #1e1925,
