refactor(frontend): added logo to new image directory in assets folder

--- a/libs/ui-components/src/toolbar/toolbar.component.html
+++ b/libs/ui-components/src/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="header-toolbar">
   <div class="header-toolbar__left">
     <div class="title-bar__logo">
-      <img src="logo.svg" alt="logo" />
+      <img src="assets/images/logo.svg" alt="logo" />
     </div>
     <div class="title-bar__titles">
       <h1 class="main-title">{{ 'toolbar.MAIN_TITLE' | transloco }}</h1>
@@ -13,7 +13,7 @@
         <span>{{ 'toolbar.SIGNIN' | transloco }}</span>
       </button>
       <button class="header-toolbar__secondary__btn">
-        <span>{{ 'toolbar.START_FOR_FREE' | transloco }}</span>
+        <span>{{ 'toolbar.LOGIN' | transloco }}</span>
       </button>
       <button class="header-toolbar__lang__switcher" (click)="toggleOverlay()">
         <mat-icon aria-hidden="false" fontIcon="more_vert"></mat-icon>
